@@ -2,6 +2,7 @@
 	- Tag 1.4.15 (same as 1.4.15rc1), for 1.4.15 release.
 	- trunk 1.4.16; includes changes memset testcode, #424 openindiana,
 	  and keyfile write fixup.
+	- applied patch to support outgoing-interface with ub_ctx_set_option.
 
 23 January 2012: Wouter
 	- Fix memset in test code.
